--- a/index.html
+++ b/index.html
@@ -2,30 +2,41 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Figma Prototype Wrapper</title>
   <style>
-    /* Zorg dat de pagina en iframe de volle breedte gebruiken */
-    body, html { margin: 0; padding: 0; height: 100%; }
-    #figmaFrame { width: 100%; height: 100vh; border: none; }
+    /* Zorg dat alles de volle viewport vult en geen marges heeft */
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    /* Maak de iframe absoluut gepositioneerd, 100% breed en hoog */
+    #figmaFrame {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
   </style>
 </head>
 <body>
 
-  <!-- 1) Plak hier je Figma embed-iframe -->
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" 
-  src="https://embed.figma.com/proto/517QDX3OyvKubuuTHUsVan/Thesis-1.1?node-id=24-2&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=24%3A2&embed-host=share" allowfullscreen></iframe>
+  <!-- Vaste breedte/hoogte weg en id="#figmaFrame" erop zetten -->
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
+    src="https://embed.figma.com/proto/517QDX3OyvKubuuTHUsVan/Thesis-1.1?node-id=24-2&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=24%3A2&embed-host=share" allowfullscreen></iframe>
 
   <script>
-    // 2) Click counter
+    // je click-tracking script blijft hetzelfde
     let clickCount = 0;
-    // 3) Zodra de iframe geladen is, luister naar clicks
     const frame = document.getElementById('figmaFrame');
     frame.addEventListener('load', () => {
-      // contentWindow kan beperkt zijn, maar Figma embed staat open
       frame.contentWindow.document.addEventListener('click', () => {
         clickCount++;
-        // 4) Stuur aantal clicks naar parent via postMessage
         window.parent.postMessage({ clickCount }, '*');
       });
     });
@@ -33,3 +44,4 @@
 
 </body>
 </html>
+
