--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Figma Prototype Wrapper</title>
   <style>
-    /* Zorg dat alles de volle viewport vult en geen marges heeft */
+    /* Volledig scherm zonder scrollbars of marges */
     html, body {
       margin: 0;
       padding: 0;
@@ -13,7 +13,7 @@
       height: 100%;
       overflow: hidden;
     }
-    /* Maak de iframe absoluut gepositioneerd, 100% breed en hoog */
+    /* Iframe vult het hele scherm */
     #figmaFrame {
       position: absolute;
       top: 0;
@@ -26,22 +26,29 @@
 </head>
 <body>
 
-  <!-- Vaste breedte/hoogte weg en id="#figmaFrame" erop zetten -->
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"
-    src="https://embed.figma.com/proto/517QDX3OyvKubuuTHUsVan/Thesis-1.1?node-id=24-2&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=24%3A2&embed-host=share" allowfullscreen></iframe>
+  <!-- Let op: id="figmaFrame" is essentieel voor styling -->
+  <iframe
+    id="figmaFrame"
+    src="https://embed.figma.com/proto/517QDX3OyvKubuuTHUsVan/Thesis-1.1?node-id=24-2&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=24%3A2&embed-host=share"
+    allowfullscreen
+  ></iframe>
 
   <script>
-    // je click-tracking script blijft hetzelfde
+    // TRACK EVERY CLICK ON THIS WRAPPER PAGE
     let clickCount = 0;
-    const frame = document.getElementById('figmaFrame');
-    frame.addEventListener('load', () => {
-      frame.contentWindow.document.addEventListener('click', () => {
-        clickCount++;
-        window.parent.postMessage({ clickCount }, '*');
-      });
+
+    // Telt elke klik, ook die “door” het iframe heen
+    document.addEventListener('click', () => {
+      clickCount++;
+      // Stuur de meest recente clickCount naar de parent (Qualtrics)
+      window.parent.postMessage({ clickCount }, '*');
+    });
+
+    // Voor de zekerheid bij sluiten/verversen nog één laatste bericht
+    window.addEventListener('beforeunload', () => {
+      window.parent.postMessage({ clickCount }, '*');
     });
   </script>
 
 </body>
 </html>
-
